<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_app"
            android:icon="@drawable/ic_baseline_app_settings_alt_24"
            android:title="@string/menu_app_permissions" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/profile_avatar_night"
            android:title="@string/menu_user_permissions" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/w_fi_wireless_network"
            android:title="@string/menu_wifi" />
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_signout"
        android:title="@string/signing_out" />
 </menu>