<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="40dp"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/tvQuote"
                style="@style/login_quote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/sign_up_quote"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="4"
                android:padding="10dp"
                android:src="@drawable/wifi_3d" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:background="@color/gray_t50"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etFullName"
                style="@style/login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/display_name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                style="@style/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                app:icon="@drawable/ic_baseline_how_to_reg_24" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_arrow_left_24" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/small_fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_1"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/signin"
                    android:textColor="@color/orange_900" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>