<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_login_bg"
    android:fitsSystemWindows="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp">

        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:src="@drawable/wifi_3d" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">

            <TextView
                android:id="@+id/tvQuote"
                style="@style/login_quote"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/login_quote"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_t50"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/login_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/login_input_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/small_fonts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etPassword"
                    android:layout_marginTop="-10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="end"
                    android:text="@string/forgot"
                    android:textColor="@color/orange_900"
                    android:textStyle="bold" />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/login"
                app:icon="@drawable/ic_baseline_login_24" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/tv_1"
                    style="@style/small_fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/small_fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_1"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange_900"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/tv_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_sign_up"
                    android:src="@drawable/ic_baseline_arrow_right_24" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>