<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clUpdateFields"
        tools:context=".ui.main.enrollment.EnrollmentFragment">


        <RelativeLayout
            android:id="@+id/rlInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="110dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wi_fi_name"
                        android:paddingBottom="10dp"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_baseline_wifi_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_wifi_name"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wi_fi_password"
                        android:paddingBottom="10dp"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_wifi_password"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/security_type"
                        android:paddingBottom="10dp"
                        app:startIconDrawable="@drawable/ic_baseline_security_24">

                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteSecurityType"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/connection_type"
                        android:paddingBottom="10dp"
                        app:startIconDrawable="@drawable/ic_baseline_cast_connected_24">

                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteConnectionType"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lay_ip_address"
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ip_address"
                        android:paddingBottom="10dp"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_baseline_settings_ethernet_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_ip_address"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/router_login_id"
                        android:paddingBottom="10dp"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_login_id"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/router_access_password"
                        android:paddingBottom="10dp"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_location"
                        android:paddingBottom="10dp"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_device_location"
                            style="@style/textInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/broadcast_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_rectangle_corner_normal"
                        android:drawableStart="@drawable/ic_baseline_signal_cellular_24"
                        android:drawablePadding="10dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="10dp"
                        android:text="@string/broadcast_ssid"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>


        </RelativeLayout>

        <FrameLayout
            android:id="@+id/flActionControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_playlist_add_24"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/update"
                android:textSize="16sp"
                android:visibility="gone"
                app:icon="@drawable/ic_baseline_update_24"
                app:iconGravity="textStart" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/layout_permission_denied"  />
</androidx.constraintlayout.widget.ConstraintLayout>

